@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.26 2004/03/31 07:03:30 cube Exp $
+$NetBSD: distinfo,v 1.27 2004/05/14 09:20:31 xtraeme Exp $
 
-SHA1 (ethereal-0.10.3.tar.bz2) = f70def9be75d7232cf40635a6b455b583d54cb8f
-Size (ethereal-0.10.3.tar.bz2) = 4840005 bytes
+SHA1 (ethereal-0.10.4.tar.bz2) = d493c8df935f6db3c5f93a17b03e0b99d25bbe6e
+Size (ethereal-0.10.4.tar.bz2) = 4889371 bytes
